# senior-student-app

./: .gitignore  README.md  fix_ssl.py  index.html  install_certificates.py  install_macos_certificates.py  package-lock.json  package.json  run_app_with_ssl_disabled.py  run_with_ssl_disabled.sh  server.js  test_ssl_fix.py
backend/: init_db.py  pyproject.toml  senior_student.db
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  chores.py  seniors.py  students.py  users.py
backend/app/core/: auth.py  config.py  security.py
backend/app/crud/: __init__.py  base.py  chore.py  senior.py  student.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chore.py  feedback.py  senior.py  student.py  user.py
backend/app/schemas/: __init__.py  chore.py  feedback.py  senior.py  student.py  token.py  user.py
docs/development/: roadmap.md
frontend/: package-lock.json  package.json  playwright.config.js
frontend/.github/workflows/: playwright.yml
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: AuthPages.css  ChoreDetailPage.js  ChoreListPage.js  Dashboard.css  DashboardSenior.js  DashboardStudent.js  HomePage.css  HomePage.js  LoginPage.js  NotFoundPage.css  NotFoundPage.js  ProfilePage.js  RegisterPage.js
frontend/tests/: README.md
presentation/: enhanced-slide-deck-with-images.html  enhanced-slide-deck.html  presentation-overview.md  slide-deck.md
(+11 files in other folders)
